feat(video-source-transfer): 添加audioTransferChunk & 提取页面样式

--- a/src/assets/css/videoTransfer.scss
+++ b/src/assets/css/videoTransfer.scss
@@ -1,63 +1,3 @@
-.page-nav {
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-  font-size: 18px;
-}
-
-.page-nav .nav-item {
-  border: none;
-  cursor: pointer;
-}
-
-.page-nav .nav-item.active {
-  color: #0094ff;
-}
-
-.uploader-input {
-  display: none;
-}
-
-.btn.J_UploaderBtn {
-  padding: 12px 20px;
-  font-size: 17px;
-  box-shadow: 0 0 0px;
-  border: 1px dashed #ddd;
-  transition: all .25s ease-in;
-}
-
-.btn.J_UploaderBtn:hover,
-.btn.J_UploaderBtn:visited {
-  border: 1px dashed #0094ff;
-  color: #0094ff;
-}
-
-.upload-container {
-  margin: 5px 0 15px;
-}
-
-.btn-group .btn {
-  margin-left: 10px;
-}
-
-.form-item {
-  margin-top: 15px;
-
-  .input-size-large {
-    padding: 10px 16px;
-    width: 510px;
-  }
-}
-
-.no-data-tip {
-  width: 600px;
-  border: 1px dashed #ddd;
-  padding: 10px 15px;
-  box-sizing: border-box;
-
-  h2 {
-    width: 100%;
-    color: #8d8d8d;
-    text-align: center;
-  }
-}
+@import "./components/pageNav.scss";
+@import "./components/uploaderInput.scss";
+@import "./components/noDataTip.scss";
