--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -1,3 +1,4 @@
 @import "./components/pageNav.scss";
+@import "./components/indexSearchBar.scss";
 @import "./components/listTable.scss";
 @import "./components/indexPagination.scss";
