feat(source-transfer-scripts): 实现回到顶部: 逻辑 & 样式

--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -2,3 +2,4 @@
 @import "./components/indexSearchBar.scss";
 @import "./components/listTable.scss";
 @import "./components/indexPagination.scss";
+@import "./components/backTop.scss";
