--- a/src/assets/css/components/uploaderInput.scss
+++ b/src/assets/css/components/uploaderInput.scss
@@ -1,3 +1,9 @@
+.video-transfer-uploader {
+  overflow-y: auto;
+  padding: 8px;
+  box-sizing: border-box;
+}
+
 .uploader-input {
   display: none;
 }
