feat(source-transfer-scripts): 添加 Selector 样式 & 逻辑; 修复时间异常; 修复  Uploader 设置异常

--- a/src/assets/css/components/listTable.scss
+++ b/src/assets/css/components/listTable.scss
@@ -8,11 +8,22 @@
   thead {
     border-bottom: 1px solid #ddd;
     box-sizing: border-box;
+
+    .list-table-row {
+      box-shadow: 1px 0 1px #dedede;
+      padding-left: 3px;
+    }
   }
 
   .list-table-row {
     height: 50px;
     line-height: 50px;
+  }
+
+  .list-table-head,
+  .list-table-data {
+    padding: 0 3px;
+    box-sizing: border-box;
   }
 
   .list-table-data {
