--- a/src/assets/css/sourceList.scss
+++ b/src/assets/css/sourceList.scss
@@ -3,3 +3,4 @@
 @import "./components/listTable.scss";
 @import "./components/indexPagination.scss";
 @import "./components/backTop.scss";
+@import "./components/selector.scss";
