--- a/src/assets/css/components/listTable.scss
+++ b/src/assets/css/components/listTable.scss
@@ -39,6 +39,7 @@
       border-radius: 3px;
       background-color: #c2c2c2;
       color: #fff;
+      user-select: none;
 
       &.type-audio {
         background-color: #e32727;
