--- a/src/assets/css/components/uploaderInput.scss
+++ b/src/assets/css/components/uploaderInput.scss
@@ -1,3 +1,10 @@
+.upload-box {
+  margin-top: 10px;
+  border: 1px dashed #f6f6f6;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
 .video-transfer-uploader {
   overflow-y: auto;
   padding: 8px;
