--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -1,5 +1,3 @@
-@import "./components/pageNav.scss";
-@import "./components/indexSearchBar.scss";
-@import "./components/listTable.scss";
-@import "./components/indexPagination.scss";
-@import "./components/backTop.scss";
+@import "./components/pageHeader.scss";
+@import "./components/pageFooter.scss";
+@import "./components/pageContent.scss";
