--- a/src/assets/css/reset.scss
+++ b/src/assets/css/reset.scss
@@ -5,6 +5,17 @@ body {
   color: #3d3d3d;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+  font-style: normal;
+}
+
 a {
   text-decoration: none;
   color: #000;
