--- a/src/assets/css/components/uploaderInput.scss
+++ b/src/assets/css/components/uploaderInput.scss
@@ -5,7 +5,8 @@
   box-sizing: border-box;
 }
 
-.video-transfer-uploader {
+.video-transfer-uploader,
+.audio-transfer-uploader {
   overflow-y: auto;
   padding: 8px;
   box-sizing: border-box;
