fix(source-transfer-scripts): 详情页样式调整

--- a/src/assets/css/components/detailInfoTable.scss
+++ b/src/assets/css/components/detailInfoTable.scss
@@ -28,6 +28,10 @@
         user-select: none;
         border-right: 1px solid #e8e8e8;
         box-sizing: border-box;
+
+        img {
+          max-width: 600px;
+        }
       }
     }
   }
