--- a/src/assets/css/components/detailInfoTable.scss
+++ b/src/assets/css/components/detailInfoTable.scss
@@ -29,8 +29,30 @@
         border-right: 1px solid #e8e8e8;
         box-sizing: border-box;
 
+        &:last-child {
+          @media (min-width: 0px) {
+            max-width: 300px;
+          }
+          
+          @media (max-width: 1200px) {
+            max-width: 600px;
+          }
+        }
+
         img {
-          max-width: 600px;
+          display: block;
+          width: 100%;
+          height: 100%;
+          
+          @media (min-width: 0) {
+            min-height: 180px;
+          }
+
+          @media (min-width: 1200px) {
+            // min-height: 120px;
+            width: 400px;
+            height: 300px;
+          }
         }
       }
     }
