--- a/src/assets/css/components/detailPlayContainer.scss
+++ b/src/assets/css/components/detailPlayContainer.scss
@@ -3,6 +3,15 @@
   min-height: 300px;
 
   .play-comp {
+    
+    @media (min-width: 0) {
+      max-width: 300px;
+    }
+
+    @media (min-width: 600px) {
+      max-width: 500px;
+    }
+
     margin: 20px;
     padding: 10px;
     box-sizing: border-box;
