fix(source-transfer-scripts): 添加批量上传逻辑 & 样式

--- a/src/assets/css/components/uploaderInput.scss
+++ b/src/assets/css/components/uploaderInput.scss
@@ -46,6 +46,13 @@
 
   .input-size-large {
     padding: 10px 16px;
-    width: 510px;
+
+    @media (min-width: 0) {
+      width: 100%;
+    }
+
+    @media (min-width: 520px) {
+      width: 510px;
+    }
   }
 }
