--- a/src/assets/css/components/pageFooter.scss
+++ b/src/assets/css/components/pageFooter.scss
@@ -6,7 +6,7 @@
   width: 100%;
   height: 60px;
   line-height: 60px;
-  background-color: #d3d3d3;
+  background-color: #f3f3f3;
   color: #fff;
   padding: 0 15px;
   box-sizing: border-box;
