feat(source-transfer-scripts): 添加 scrollTop 逻辑 & 首页 scrollTop 样式注册

--- a/src/assets/css/components/backTop.scss
+++ b/src/assets/css/components/backTop.scss
@@ -9,7 +9,7 @@
   z-index: 1000;
   background-color: #fff;
   border-radius: 50%;
-  box-shadow: 0 0 2px #0d0d0d;
+  box-shadow: 0 0 2px #1296db;
   cursor: pointer;
   font-size: 14px;
   text-align: center;
@@ -22,7 +22,7 @@
     text-align: center;
   }
 
-  img {
+  img, svg {
     display: block;
     width: 32px;
     height: 32px;
