--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -1,3 +1,4 @@
 @import "./components/pageHeader.scss";
 @import "./components/pageFooter.scss";
 @import "./components/pageContent.scss";
+@import "./components/backTop.scss";
