--- a/src/assets/css/components/pageContent.scss
+++ b/src/assets/css/components/pageContent.scss
@@ -1,3 +1,5 @@
+@import "./utils.scss";
+
 .container {
   position: fixed;
   z-index: 1;
@@ -52,10 +54,6 @@
       float: left;
       margin-bottom: 15px;
       box-shadow: 1px 3px 5px #ddd;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      animation: scroll 5s infinite linear;
 
       .page-cover {
         height: 250px;
@@ -90,6 +88,8 @@
         }
 
         .page-description {
+          @include ellipse;
+
           max-height: 200px;
           overflow-y: auto;
         }
