feat(source-transfer-scripts): 修改视频弹窗

--- a/src/assets/css/sourceList.scss
+++ b/src/assets/css/sourceList.scss
@@ -4,3 +4,4 @@
 @import "./components/indexPagination.scss";
 @import "./components/backTop.scss";
 @import "./components/selector.scss";
+@import "./components/modal.scss";
