--- a/src/assets/css/videoTransfer.scss
+++ b/src/assets/css/videoTransfer.scss
@@ -2,3 +2,4 @@
 @import "./components/uploaderInput.scss";
 @import "./components/noDataTip.scss";
 @import "./components/showList.scss";
+@import "./components/modal.scss";
