feat(source-transfer-scripts): 添加音频上传切换选项卡

--- a/src/assets/css/audioTransfer.scss
+++ b/src/assets/css/audioTransfer.scss
@@ -3,3 +3,4 @@
 @import "./components/noDataTip.scss";
 @import "./components/showList.scss";
 @import "./components/modal.scss";
+@import "./components/audioTransferTab.scss";
