--- a/src/assets/css/index.scss
+++ b/src/assets/css/index.scss
@@ -1,4 +1,2 @@
-@import "./components/pageHeader.scss";
-@import "./components/pageFooter.scss";
-@import "./components/pageContent.scss";
+@import "./components/pageLayout.scss";
 @import "./components/backTop.scss";
