fix(source-transfer-scripts): 样式调整 & 列表页面滚动修复

--- a/src/assets/css/audioTransfer.scss
+++ b/src/assets/css/audioTransfer.scss
@@ -4,3 +4,4 @@
 @import "./components/showList.scss";
 @import "./components/modal.scss";
 @import "./components/audioTransferTab.scss";
+@import "./components/pageLayout.scss";
