--- a/src/assets/css/detail.scss
+++ b/src/assets/css/detail.scss
@@ -1,3 +1,4 @@
 @import "./components/detailContainerItem.scss";
 @import "./components/detailInfoTable.scss";
 @import "./components/detailPlayContainer.scss";
+@import "./components/pageLayout.scss";
