--- a/src/assets/css/sourceList.scss
+++ b/src/assets/css/sourceList.scss
@@ -5,3 +5,4 @@
 @import "./components/backTop.scss";
 @import "./components/selector.scss";
 @import "./components/modal.scss";
+@import "./components/pageLayout.scss";
