--- a/src/assets/css/components/modal.scss
+++ b/src/assets/css/components/modal.scss
@@ -2,6 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 9999;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
